src/validation/tests/snapshots/rusty__validation__tests__recursive_validation_tests__structs__one_cycle_self_a_ui.snap
---
source: src/validation/tests/recursive_validation_tests.rs
expression: diagnostician.buffer().unwrap()
---
error: Recursive data structure `A -> A` has infinite size
  ┌─ input:2:18
  │
2 │             TYPE A : STRUCT
  │                  ^ Recursive data structure `A -> A` has infinite size


